# tetrika-junior

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
task1/: solution.py  tests.py
task2/solution/: main.py
task2/solution/application/: letter_counter.py
task2/solution/core/: logger.py  settings.py
task2/solution/domen/: entities.py
task2/solution/infrastructure/: file_writer.py  page_cache.py  wiki_collector.py  wiki_scraper.py
task2/tests/: test_entities.py  test_file_writer.py  test_page_cache.py
task3/: solution.py  tests.py
